# tweet_tips_predictor

./: .env.sample  .gitignore  Dockerfile  Dockerfile-flask  Dockerfile-nginx  README.md  app.conf  app.ini  app.py  config.py  docker-compose.yml  pyproject.toml  uwsgi.ini
datasets/: tweets.csv
tests/: conftest.py  test_seed.py  test_tweet_tips_predictor.py
tests/api/: test_routes.py
tests/models/: test_tweet.py
tests/predictor/: test_predictor.py
tweet_tips_predictor/: __init__.py  database.py  predictor.py  seed.py  utils.py
tweet_tips_predictor/main/: __init__.py  routes.py
tweet_tips_predictor/models/: tweet.py
