[tool.poetry]
name = "tweet_tips_predictor"
version = "0.1.0"
description = ""
authors = ["José Victor <josevictorferreira@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
